fix padding on iphone

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -690,16 +690,7 @@ section {
     
     }
 
-    @media screen and (min-device-width: 280px) and (max-device-width: 653px) { 
    
-        .container-fluid {
-            padding-left: 0px;
-            padding-right: 0px;
-        }
-        
-        
-        
-        }
 
 
 
